# message

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cert.pem  docker-compose.yaml  dockerfile  executor.py  key.pem  makefile  mongo-key.file  planner.py  pyproject.toml  schema.py  server.py  setup.py  supervisord.conf  test.py  tp.js  utils.py
apis/: __init__.py  endpoint.py  execution.py  message.py  plan.py  provider.py  template.py
apps/endpoint/: __init__.py  api.py  listeners.py  models.py  subscriber.py
apps/endpoint/schemas/: input.py  (+1 more)
apps/message/: __init__.py  api.py  events.py  models.py  subscriber.py  utils.py
apps/plan/: api.py  models.py  task.py
apps/scheduler/: api.py  events.py  models.py  task.py  utils.py
apps/template/: api.py  models.py  utils.py
benchmarks/: mongodb-libs.py  redis-db.py  redis-get.py
common/: command.py  constants.py  depend.py  eventbus.py  exceptions.py  health.py  pubsub.py  response.py  webargs.py
configs/: __init__.py  api.py  cache.py  database.py  queue.py  server.py
devops/docker-compose/: docker-compose.yaml
dockerfiles/: message.dockerfile
infrastructures/: __init__.py  cache.py  graphql.py  mongodb.py  queue.py  websocket.py
message/: lifespan.py  main.py  makefile  settings.yaml  uvicorn_worker.py  wiring.py  worker.py
message/applications/: __init__.py  base.py  contact.py  endpoint.py  health.py  message.py  provider.py  user.py
message/common/: constants.py  models.py
message/contacts/: email.py  mobile.py  websocket.py
message/exceptions/: __init__.py  base.py  contact.py  endpoint.py  provider.py  user.py
message/fixtures/: builtin_contacts.toml
message/helpers/: decorators.py  metaclasses.py  signals.py  toml.py
message/infra/: __init__.py  background.py  cache.py  distirbution.py  persistence.py  queue.py  storage.py  websocket.py
message/mixins/: __init__.py  contact.py  endpoint.py  message.py  provider.py  user.py
message/models/: __init__.py  contact.py  endpoint.py  message.py  provider.py  user.py
message/providers/: __init__.py  _apprise.py  abc.py  email.py  websocket.py
models/: __init__.py  endpoint.py  execution.py  message.py  plan.py  provider.py  template.py
nginx/: nginx.conf
scripts/: run_server.sh
src/: lifespan.py  main.py  makefile  settings.yaml
src/apis/: __init__.py
src/applications/: __init__.py  base.py  contact.py  end_user.py  endpoint.py  health.py  message.py  provider.py  user.py
src/common/: constants.py  ddd.py  fields.py  models.py
src/contacts/: email.py  mobile.py  websocket.py
src/events/: __init__.py  base.py  manager.py  message.py
src/exceptions/: __init__.py  base.py  contact.py  endpoint.py  message.py  provider.py  user.py
src/helpers/: decorators.py  signals.py
src/infra/: __init__.py  abc.py  background.py  cache.py  distirbution.py  job.py  persistence.py  queue.py  storage.py  websocket.py
src/mixins/: __init__.py  contact.py  endpoint.py  message.py  provider.py  user.py
src/models/: __init__.py  contact.py  end_user.py  endpoint.py  message.py  provider.py  user.py
src/plugins/: __init__.py
src/providers/: __init__.py  abc.py  websocket.py
src/repositories/: __init__.py  end_user.py
tests/: createEndpoint.js  createPlan.js  createProvider.js  destroyEndpoint.js  queryEndpoints.js  queryProviders.js  retrieveEndpoint.js  retrieveProvider.js  sendMessage.js  test_blinker.py  test_private_attr.py  test_websocket_max_connection.py  test_websocket_server.py  updateEndpoint.js  ws.js
tests/load/: nothing.js  send_message.js  ws_connection.js
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
(+73 files in other folders)
